[gd_scene load_steps=17 format=3 uid="uid://2nhl36r3044k"]

[ext_resource type="Texture2D" uid="uid://ddwfimryeqkwd" path="res://Units/SwordsmanTemplate.png" id="1_kbn1b"]
[ext_resource type="Script" path="res://Units/MeleeAttacker.gd" id="1_v8s4w"]
[ext_resource type="PackedScene" uid="uid://dwhpy3b35ip4h" path="res://Global/unitStateMachine.tscn" id="3_t8cbd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1cita"]
radius = 2.99998
height = 15.9999

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfrg4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0.8, 0.8, 1)
border_blend = true

[sub_resource type="Animation" id="Animation_54nig"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_c7o0i"]
resource_name = "WalkDown"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_xm7aa"]
resource_name = "WalkLeft"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_k1263"]
resource_name = "WalkRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_dwg0c"]
resource_name = "WalkUp"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_3bi60"]
resource_name = "attackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_pegfn"]
resource_name = "attackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.3001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38, 38]
}

[sub_resource type="Animation" id="Animation_u0fi7"]
resource_name = "attackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_laq7p"]
resource_name = "attackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordsmanTemplate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m8ukh"]
_data = {
"RESET": SubResource("Animation_54nig"),
"WalkDown": SubResource("Animation_c7o0i"),
"WalkLeft": SubResource("Animation_xm7aa"),
"WalkRight": SubResource("Animation_k1263"),
"WalkUp": SubResource("Animation_dwg0c"),
"attackDown": SubResource("Animation_3bi60"),
"attackLeft": SubResource("Animation_pegfn"),
"attackRight": SubResource("Animation_u0fi7"),
"attackUp": SubResource("Animation_laq7p")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5m8ow"]
radius = 59.0339

[node name="meleeAttacker" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
input_pickable = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_v8s4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.48946e-10, 4)
rotation = -1.56731
shape = SubResource("CapsuleShape2D_1cita")

[node name="SwordsmanTemplate" type="Sprite2D" parent="."]
texture = ExtResource("1_kbn1b")
hframes = 5
vframes = 12
frame = 1

[node name="Box" type="Panel" parent="."]
offset_left = -8.0
offset_top = -7.0
offset_right = 8.0
offset_bottom = 7.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jfrg4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m8ukh")
}

[node name="StopTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="UnitStateMachine" parent="." instance=ExtResource("3_t8cbd")]

[node name="VisionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRange"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_5m8ow")

[node name="NavigationNode" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="NavigationNode"]
avoidance_enabled = true
radius = 16.0
avoidance_mask = 2
debug_enabled = true

[node name="NavTimer" type="Timer" parent="NavigationNode"]
wait_time = 0.1
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_meleeAttacker_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_meleeAttacker_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="UnitStateMachine" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StopTimer" to="UnitStateMachine" method="_on_stop_timer_timeout"]
[connection signal="body_entered" from="VisionRange" to="." method="_on_vision_range_body_entered"]
[connection signal="body_exited" from="VisionRange" to="." method="_on_vision_range_body_exited"]
[connection signal="velocity_computed" from="NavigationNode/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="NavigationNode/NavTimer" to="." method="_on_nav_timer_timeout"]
